--- a/HMineral/Base.lproj/Main.storyboard
+++ b/HMineral/Base.lproj/Main.storyboard
@@ -168,10 +168,10 @@
             </objects>
             <point key="canvasLocation" x="401" y="219"/>
         </scene>
-        <!--View Controller-->
+        <!--Web View Controller-->
         <scene sceneID="Oa7-hR-Bcf">
             <objects>
-                <viewController id="zxy-Qa-IFW" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="webView" id="zxy-Qa-IFW" customClass="WebViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xyp-55-7rl"/>
                         <viewControllerLayoutGuide type="bottom" id="WY5-it-ZVr"/>
@@ -180,7 +180,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RJg-06-QtN">
+                            <webView contentMode="scaleToFill" fixedFrame="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RJg-06-QtN">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
@@ -313,7 +313,7 @@
         <scene sceneID="Q65-Qh-0J0">
             <objects>
                 <tableViewController id="TJU-ks-cdX" customClass="SeventhViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="uXA-vk-bRz" customClass="SeventViewControler">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="uXA-vk-bRz" userLabel="Seventh View Controller">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -327,10 +327,6 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="TJU-ks-cdX" id="cnD-ms-Z7n"/>
-                            <outlet property="delegate" destination="TJU-ks-cdX" id="TjT-Ky-agn"/>
-                        </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Khg-PY-Hae"/>
                     <connections>
